center align the FAQ arrow - fixes #48

--- a/src/stylesheets/pageparts/_faqs.sass
+++ b/src/stylesheets/pageparts/_faqs.sass
@@ -41,7 +41,9 @@
       padding-top: 0
 
       &:after
-        +clamp('top', -0.9em, -0.45em, $largeMobile, $desktop)
+        +clamp('bottom', 1.8em, 1.3em, $largeMobile, $desktop)
+        margin: auto
+        top: 0
 
     &__content
       word-wrap: break-word
